Fixed Hercinia Localisation

--- a/ThedasKings/localisation/da_culture.csv
+++ b/ThedasKings/localisation/da_culture.csv
@@ -12,13 +12,12 @@ starkhaven;Starkhaven;;;;;;;;;;;;;x
 kirkwaller;Kirkwaller;;;;;;;;;;;;;x
 ostwick;Ostwick;;;;;;;;;;;;;x
 markham;Markham;;;;;;;;;;;;;x
-hercine;Hercine;;;;;;;;;;;;;x
 tantervale;Tantervale;;;;;;;;;;;;;x
 hasmal;Hasmal;;;;;;;;;;;;;x
 ansburg;Ansburg;;;;;;;;;;;;;x
 bastion;Bastion;;;;;;;;;;;;;x
 wycome;Wycome;;;;;;;;;;;;;x
-hercina;Hercina;;;;;;;;;;;;;x
+hercinia;Hercinia;;;;;;;;;;;;;x
 caimen_brea;Caimen Brea;;;;;;;;;;;;;x
 navarran;Navarran;;;;;;;;;;;;;x
 cumberland;Cumberlander;;;;;;;;;;;;;x
