--- a/ThedasKings/localisation/da_religion.csv
+++ b/ThedasKings/localisation/da_religion.csv
@@ -15,13 +15,14 @@ dragon_of_slaves;The Dragon of Slaves;;;;;;;;;;;;;x
 dragon_of_beauty;The Dragon of Beauty;;;;;;;;;;;;;x
 dragon_of_mystery;The Dragon of Mystery;;;;;;;;;;;;;x
 dragon_of_night;The Dragon of Night;;;;;;;;;;;;;x
+darkspawn_old_gods;The Old Gods;;;;;;;;;;;;;x
 old_gods;The Old Gods;;;;;;;;;;;;;x
 the_stone;The Stone;;;;;;;;;;;;;x
 our_ancestors;Our Ancestors;;;;;;;;;;;;;x
 pagan_group;Pagans;;;;;;;;;;;;;x
 pagan;Pagans;;;;;;;;;;;;;x
-avvar;Avaar Pantheon;;;;;;;;;;;;;x
-chasind;Chasind Pantheon;;;;;;;;;;;;;x
+avvar;Sky Cults;;;;;;;;;;;;;x
+chasind;Chasind Shamanism;;;;;;;;;;;;;x
 orth;Orth Pantheon;;;;;;;;;;;;;x
 EXALTED_MARCH;Exlated March;;;;;;;;;;;;;x
 CAMPAIGN;Campaign;;;;;;;;;;;;;x
