--- a/ThedasKings/localisation/da_special_troops.csv
+++ b/ThedasKings/localisation/da_special_troops.csv
@@ -1,7 +1,10 @@
 tal_vashoth_mercenary;Tal-Vashoth Mercenary;;;;;;;;;;;;;x
-tevinter_elephants;Tevinter War Elephants;;;;;;;;;;;;;x
+war_elephants;Tevinter War Elephants;;;;;;;;;;;;;x
 magi_chantry;Chantry Mages;;;;;;;;;;;;;x
 magi_apostate;Apostates;;;;;;;;;;;;;x
 magi_blood_mage;Maleficarum;;;;;;;;;;;;;x
 chantry_templar;Templar;;;;;;;;;;;;;x
 darkspawn_ogre;Ogre;;;;;;;;;;;;;x
+dwarvern_mercenary;Surface Dwarf;;;;;;;;;;;;;x
+elven_mercenary;Elvish Hunters;;;;;;;;;;;;;x
+mabari;Mabari Hounds;;;;;;;;;;;;;x
